Properly disable menu items

--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -20,7 +20,7 @@
       <div class="nav-group">
         <div class="group-items">
           <a
-            [routerLink]="kbUrl + '/upload'"
+            [routerLink]="(isAdminOrContrib | async) && !(invalidKey | async) ? kbUrl + '/upload' : null"
             class="nav-link"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
@@ -35,23 +35,22 @@
           <a
             class="nav-link"
             routerLinkActive="active"
-            [routerLink]="kbUrl + '/search'"
+            [routerLink]="!(invalidKey | async) ? kbUrl + '/search' : null"
             [class.disabled]="invalidKey | async">
             <pa-icon name="search"></pa-icon>
             <span class="nav-link-title">{{ 'stash.search' | translate }}</span>
           </a>
           <a
-            [routerLink]="kbUrl + '/resources'"
+            [routerLink]="!(invalidKey | async) ? kbUrl + '/resources' : null"
             routerLinkActive="active"
             class="nav-link"
             [class.disabled]="invalidKey | async">
             <pa-icon name="list"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.list' | translate }}</span>
           </a>
-          <ng-container *ngIf="!standalone">
+          <ng-container *ngIf="!standalone && (isTrial | async) === false">
             <a
-              *ngIf="(isTrial | async) === false"
-              [routerLink]="kbUrl + '/activity/download'"
+              [routerLink]="(isAdminOrContrib | async) ? kbUrl + '/activity/download' : null"
               routerLinkActive="active"
               class="nav-link"
               [class.disabled]="!(isAdminOrContrib | async)">
@@ -61,7 +60,7 @@
           </ng-container>
 
           <a
-            [routerLink]="kbUrl + '/label-sets'"
+            [routerLink]="!(invalidKey | async) ? kbUrl + '/label-sets' : null"
             routerLinkActive="active"
             class="nav-link"
             [class.disabled]="invalidKey | async">
@@ -70,7 +69,7 @@
           </a>
           <a
             *ngIf="isEntitiesEnabled | async"
-            [routerLink]="[kbUrl + '/entities']"
+            [routerLink]="!(invalidKey | async) ? kbUrl + '/entities' : null"
             routerLinkActive="active"
             class="nav-link"
             [class.disabled]="invalidKey | async">
@@ -93,7 +92,7 @@
       <div class="nav-group">
         <div class="group-items">
           <a
-            [routerLink]="kbUrl + '/manage'"
+            [routerLink]="(isAdmin | async) && !(invalidKey | async) ? kbUrl + '/manage' : null"
             routerLinkActive="active"
             class="nav-link"
             [class.disabled]="!(isAdmin | async) || (invalidKey | async)">
@@ -106,7 +105,7 @@
             *ngIf="isTrainingEnabled | async"
             class="group-items">
             <a
-              [routerLink]="kbUrl + '/training'"
+              [routerLink]="(isAdmin | async) ? kbUrl + '/training' : null"
               routerLinkActive="active"
               class="nav-link"
               [class.disabled]="!(isAdmin | async)">
@@ -140,7 +139,7 @@
 
         <div class="group-items">
           <a
-            [routerLink]="kbUrl + '/widget-generator'"
+            [routerLink]="(isAdmin | async) && !(invalidKey | async) ? kbUrl + '/widget-generator' : null"
             routerLinkActive="active"
             class="nav-link"
             [class.disabled]="!(isAdmin | async) || (invalidKey | async)">
@@ -163,7 +162,7 @@
         *ngIf="!standalone">
         <div class="group-items">
           <a
-            [routerLink]="(accountUrl | async) + '/home'"
+            [routerLink]="(isAccountManager | async) ? (accountUrl | async) + '/home' : null"
             class="nav-link"
             routerLinkActive="active"
             [class.disabled]="!(isAccountManager | async)">
