--- a/libs/common/src/lib/resources/edit-resource/classification/labels-expander/labels-expander.component.html
+++ b/libs/common/src/lib/resources/edit-resource/classification/labels-expander/labels-expander.component.html
@@ -5,7 +5,7 @@
       <pa-checkbox
         *ngFor="let label of labelset.value.labels"
         [value]="currentSelection[labelset.key + '_' + label.title]"
-        (valueChange)="updateSelection.emit({ selected: $event, labelset: labelset.key, label: label.title })">
+        (valueChange)="onSelection({ selected: $event, labelset: labelset.key, label: label.title })">
         {{ label.title }}
       </pa-checkbox>
     </div>
