Fix [sc-7350]: replace app-label-field by labels-expander in desktop settings
- move `LabelsExpanderComponent` and `classification.helpers.ts` from `common` to `sistema`
- add `getSelectionFromClassification` function in helpers
- update `LabelsExpanderComponent` to be standalone
- use `LabelsExpanderComponent` instead of `app-label-field` in desktop settings component

--- a/libs/common/src/lib/resources/edit-resource/classification/paragraph-classification/paragraph-classification.component.html
+++ b/libs/common/src/lib/resources/edit-resource/classification/paragraph-classification/paragraph-classification.component.html
@@ -74,10 +74,10 @@
             {{ 'resource.classification.clean-up' | translate }}
           </pa-button>
 
-          <stf-labels-expander
+          <nsi-labels-expander
             [labelSets]="availableLabels | async"
             [currentSelection]="currentSelection"
-            (updateSelection)="updateSelection($event)"></stf-labels-expander>
+            (updateSelection)="updateSelection($event)"></nsi-labels-expander>
         </div>
       </div>
     </div>
