--- a/libs/sistema/src/lib/labels-expander/labels-expander.component.scss
+++ b/libs/sistema/src/lib/labels-expander/labels-expander.component.scss
@@ -1,4 +1,4 @@
-@import 'apps/dashboard/src/variables';
+@import '../../../../../apps/dashboard/src/variables';
 
 .label-selector {
   padding: rhythm(1) 0 rhythm(2) rhythm(1.5);
