--- a/apps/desktop/src/app/upload/settings/settings.component.html
+++ b/apps/desktop/src/app/upload/settings/settings.component.html
@@ -104,9 +104,9 @@
           *ngIf="kbField.canBeRefreshed"
           icon="refresh"
           aspect="basic"
-          [paTooltip]="'upload.refresh' | translate : { field: kbField.label }"
+          [paTooltip]="'upload.refresh' | translate: { field: kbField.label }"
           (click)="refreshKbs(local)">
-          {{ 'upload.refresh' | translate : { field: kbField.label } }}
+          {{ 'upload.refresh' | translate: { field: kbField.label } }}
         </pa-button>
       </div>
     </ng-container>
@@ -137,10 +137,24 @@
       <div
         *ngIf="(hasLabelSets | async) === true"
         class="field">
-        <div class="body-m labels">{{ 'upload.labels' | translate }}</div>
-        <app-label-field
-          [labelSets]="labelSets | async"
-          [(selection)]="selectedLabels"></app-label-field>
+        <label
+          class="body-m"
+          for="label-expander">
+          {{ 'upload.labels' | translate }}
+        </label>
+        <div class="labels-container">
+          <nsi-labels-expander
+            id="label-expander"
+            [labelSets]="labelSets | async"
+            [currentSelection]="currentSelection"
+            (updateSelection)="updateLabelSelection($event)"></nsi-labels-expander>
+          <div>
+            <app-label-list
+              [labelSets]="labelSets | async"
+              [labelSelection]="selectedLabels"
+              (labelSelectionChange)="updateLabels($event)"></app-label-list>
+          </div>
+        </div>
       </div>
       <div
         *ngIf="(hasLabelSets | async) === false"
