--- a/apps/desktop/src/app/upload/settings/settings.component.scss
+++ b/apps/desktop/src/app/upload/settings/settings.component.scss
@@ -23,6 +23,11 @@ form {
 
 .field {
   margin-bottom: rhythm(2);
+
+  label {
+    display: block;
+    margin-bottom: rhythm(1);
+  }
 }
 
 .select-field-container {
@@ -56,12 +61,18 @@ form {
   margin: rhythm(6) 0;
 }
 
-.labels {
-  margin-bottom: rhythm(1);
-}
-
 .buttons {
   display: flex;
   gap: rhythm(2);
   margin-top: rhythm(8);
+}
+
+.labels-container {
+  display: flex;
+  gap: rhythm(2);
+
+  nsi-labels-expander {
+    flex: 0 0 auto;
+    width: rhythm(40);
+  }
 }
