Replace service access by API key

--- a/apps/dashboard/src/app/knowledge-box/service-access/service-access.component.html
+++ b/apps/dashboard/src/app/knowledge-box/service-access/service-access.component.html
@@ -100,10 +100,10 @@
     </div>
   </div>
   <ncom-hint
-    label="How to use your service access token in the API"
+    label="How to use your API key in the API"
     learnMore="https://docs.nuclia.dev/docs/docs/getting-started/quick-start/push#push-content-using-the-api">
     <p>
-      The service access token can be used on any call to the API. It goes in the
+      The API key can be used on any call to the API. It goes in the
       <code>X-NUCLIA-SERVICEACCOUNT</code>
       header and replaces the
       <code>Authorization</code>
@@ -113,7 +113,7 @@
  -X POST \
  -H "content-type: video/mp4"
  -H "x-language: fr"
- -H "X-NUCLIA-SERVICEACCOUNT: Bearer YOUR-SERVICE-ACCESS-TOKEN" \
+ -H "X-NUCLIA-SERVICEACCOUNT: Bearer YOUR-API-KEY" \
  -T /path/to/file.mp4</code></pre>
   </ncom-hint>
 </div>
