Hixe account type button when not relevant

--- a/libs/common/src/lib/topbar/topbar.component.html
+++ b/libs/common/src/lib/topbar/topbar.component.html
@@ -33,7 +33,7 @@
 
   <div class="topbar-actions">
     <pa-button
-      *ngIf="!standalone && (accountType | async) && (isAccountManager | async)"
+      *ngIf="!standalone && (shouldAccountTypeBeVisible | async)"
       kind="primary"
       aspect="basic"
       size="small"
