[sc-7652] Add parameter to allow kb management in NUA key

--- a/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -20,6 +20,10 @@
         {{ 'generic.email' | translate }}*
       </pa-input>
 
+      <pa-checkbox formControlName="allow_kb_management">
+        {{ 'account.allow_kb_management' | translate }}
+      </pa-checkbox>
+
       <pa-input
         formControlName="webhook"
         help="account.nua_webhook_help">
