Add option to widget generator

--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -183,6 +183,12 @@
             formControlName="hideLogo">
             {{ 'stash.widgets.hideLogo.label' | translate }}
           </pa-toggle>
+          <pa-toggle
+            labelOnRight
+            help="stash.widgets.filterByLabelFamily.help"
+            formControlName="filterByLabelFamily">
+            {{ 'stash.widgets.filterByLabelFamily.label' | translate }}
+          </pa-toggle>
         </div>
 
         <pa-toggle
