[sc-7636] Allow to filter by label family

--- a/libs/search-widget/src/common/checkbox/Checkbox.scss
+++ b/libs/search-widget/src/common/checkbox/Checkbox.scss
@@ -2,14 +2,16 @@
   --size-checkbox: calc(var(--rhythm-2) - var(--rhythm-0_25));
 
   align-items: center;
-  display: flex;
+  display: inline-flex;
   gap: var(--rhythm-1);
+  max-width: 100%;
 
   .sw-checkbox-control {
     -webkit-appearance: none;
     border: 1px solid var(--color-neutral-regular);
     border-radius: 1px;
     box-sizing: content-box;
+    flex: 1 0 auto;
     margin: 0;
     height: var(--size-checkbox);
     width: var(--size-checkbox);
@@ -20,6 +22,12 @@
       background-image: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36"><g fill="none" fill-rule="evenodd"><polygon fill="%23000" points="29.021 17.021 11.021 17.021 11.021 9.021 7.021 9.021 7.021 21.021 29.021 21.021" transform="rotate(-45 18.02 15.02)"/></g></svg>');
       background-size: var(--size-checkbox) var(--size-checkbox);
     }
+  }
+
+  label {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   &:not(.disabled) {
