Manager: Add regional account management support
Usage of regional endpoints is enabled be setting `NUCLIA_NEW_REGIONAL_ENDPOINTS` to true on the local storage.

--- a/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
@@ -62,7 +62,7 @@
         <li
           *ngFor="let kb of kbList | async"
           class="child-route"
-          [routerLink]="'kb/' + kb.id"
+          [routerLink]="'zone/' + kb.zoneId + '/kb/' + kb.id"
           routerLinkActive="active">
           <pa-icon
             name="knowledge-box"
