--- a/apps/manager-v2/src/app/manage-accounts/account-details/knowledge-boxes/knowledge-boxes.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/knowledge-boxes/knowledge-boxes.component.html
@@ -9,7 +9,7 @@
   <pa-table-row
     *ngFor="let kb of kbList | async"
     clickable
-    [routerLink]="'../kb/' + kb.id">
+    [routerLink]="'../zone/' + kb.zoneId + '/kb/' + kb.id">
     <pa-table-cell>
       <small>{{ kb.id }}</small>
     </pa-table-cell>
