[sc-7706] Move activity calls to regional

--- a/apps/dashboard/src/app/account/account-nua/account-nua.component.html
+++ b/apps/dashboard/src/app/account/account-nua/account-nua.component.html
@@ -31,6 +31,7 @@
         paEllipsisTooltip>
         {{ client.contact }}
       </div>
+      <div class="zone">{{ client.zone }}</div>
       <div class="buttons">
         <pa-button
           *ngIf="isNuaActivityEnabled | async"
