--- a/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.scss
+++ b/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.scss
@@ -61,6 +61,7 @@
     align-items: center;
     border-bottom: 1px solid $color-border-menu-separator;
     color: inherit;
+    cursor: pointer;
     display: flex;
     height: rhythm(5);
     justify-content: center;
