Fix 1 account case and prod build

--- a/libs/common/src/lib/select-account-kb/select-account/select-account.component.html
+++ b/libs/common/src/lib/select-account-kb/select-account/select-account.component.html
@@ -1,6 +1,4 @@
-<div
-  class="select"
-  *ngIf="(accounts | async) !== null">
+<div class="select">
   <div class="select-container">
     <div class="logo">
       <img
