Disable login button while logging in
Login validation can take some time, and it's a bit confusing to see nothing happening right after clicking on the button when that's happening (typically for users with 1 account and 1 KB). Disabling the button while validating allows the user to understand the click was taken into account.

--- a/libs/user/src/lib/login/login.component.html
+++ b/libs/user/src/lib/login/login.component.html
@@ -63,7 +63,7 @@
           <pa-button
             type="submit"
             kind="primary"
-            [disabled]="loginForm.invalid">
+            [disabled]="loginForm.invalid || isLoggingIn">
             {{ 'login.login' | translate }}
           </pa-button>
         </div>
