--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -73,7 +73,7 @@
             {{ 'stash.widgets.filter.label' | translate }}
           </pa-toggle>
           <div
-            *ngIf="mainFormFeatures.filter && isEntityFiltersEnabled | async"
+            *ngIf="mainFormFeatures.filter"
             class="filter-type">
             <pa-checkbox
               [(value)]="filters.labels"
@@ -82,6 +82,13 @@
               {{ 'stash.widgets.labels' | translate }}
             </pa-checkbox>
             <pa-checkbox
+              [(value)]="filters.created"
+              (valueChange)="onFiltersChange()"
+              [disabled]="filters.created && hasOneFilter">
+              {{ 'stash.widgets.created' | translate }}
+            </pa-checkbox>
+            <pa-checkbox
+              *ngIf="isEntityFiltersEnabled | async"
               [(value)]="filters.entities"
               (valueChange)="onFiltersChange()"
               [disabled]="filters.entities && hasOneFilter">
