--- a/libs/common/src/lib/select-account-kb/select-account/select-account.component.html
+++ b/libs/common/src/lib/select-account-kb/select-account/select-account.component.html
@@ -1,6 +1,4 @@
-<div
-  class="select"
-  *ngIf="accounts && kbs">
+<div class="select">
   <div class="select-container">
     <div class="logo">
       <img
@@ -16,10 +14,11 @@
         <div class="select-account-list">
           <div
             class="select-account-item"
-            *ngFor="let account of accounts">
+            *ngFor="let account of accounts | async">
             <a
               class="account"
-              [routerLink]="getAccountUrl(account.slug)">
+              [routerLink]="'/select/' + account.slug"
+              (click)="selectAccount(account)">
               {{ account.title }}
               <pa-icon
                 class="account-arrow"
