--- a/libs/search-widget/src/components/search-filters/SearchFilters.scss
+++ b/libs/search-widget/src/components/search-filters/SearchFilters.scss
@@ -36,16 +36,16 @@
     font-size: var(--font-size-small);
     gap: var(--rhythm-1);
     padding: var(--rhythm-1_5);
-  }
-
-  .labels {
-    padding: var(--rhythm-1) var(--rhythm-2) var(--rhythm-1) calc(var(--rhythm-5) - var(--rhythm-0_5));
+    &.indented {
+      padding: var(--rhythm-1) var(--rhythm-2) var(--rhythm-1) calc(var(--rhythm-5) - var(--rhythm-0_5));
+    }
   }
 
   input[type="date"] {
     background: none;
     border: 1px solid var(--color-neutral-light);
     box-sizing: border-box;
+    color: inherit;
     font-family: inherit;
     padding: var(--rhythm-1);
     width: 100%;
