--- a/libs/search-widget/src/components/search-filters/SearchFilters.scss
+++ b/libs/search-widget/src/components/search-filters/SearchFilters.scss
@@ -1,7 +1,7 @@
-.sw-labels-expander {
+.sw-search-filters {
   --header-button-width: var(--rhythm-4);
   --header-gap: var(--rhythm-1);
-  
+
   max-height: var(--rhythm-40);
   overflow-y: auto;
   .header {
@@ -22,16 +22,32 @@
         transform: rotate(180deg);
       }
     }
-    .header-checkbox {
+    .header-content {
       max-width: calc(100% - var(--header-button-width) - var(--header-gap));
+    }
+    .header-title {
+      cursor: pointer;
     }
   }
 
-  .labels {
+  .expander-content {
     display: flex;
     flex-direction: column;
     font-size: var(--font-size-small);
     gap: var(--rhythm-1);
-    padding: var(--rhythm-1) var(--rhythm-2) var(--rhythm-1) calc(var(--rhythm-5) - var(--rhythm-0_5));
+    padding: var(--rhythm-1_5);
+    &.indented {
+      padding: var(--rhythm-1) var(--rhythm-2) var(--rhythm-1) calc(var(--rhythm-5) - var(--rhythm-0_5));
+    }
+  }
+
+  input[type="date"] {
+    background: none;
+    border: 1px solid var(--color-neutral-light);
+    box-sizing: border-box;
+    color: inherit;
+    font-family: inherit;
+    padding: var(--rhythm-1);
+    width: 100%;
   }
 }
