[sc-7622] Warning when uploading archives or spreadsheets

--- a/libs/common/src/lib/upload/upload-files/upload-files.component.html
+++ b/libs/common/src/lib/upload/upload-files/upload-files.component.html
@@ -114,7 +114,7 @@
     <pa-button
       kind="primary"
       [disabled]="allowedFiles.length === 0"
-      (click)="startUpload()">
+      (click)="onUpload()">
       {{ 'generic.add' | translate }}
     </pa-button>
   </pa-modal-footer>
