Move user management from `core` lib to `sdk-core`
  - account users management methods in `db`
  - KB users management method in `kb`
  - remove `users.service.ts` and `users.model.ts` from `core` lib

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="kb && (isAccountManager | async) && (canAddUsers | async)">
+<ng-container *ngIf="(isAccountManager | async) && (canAddUsers | async)">
   <h3>{{ 'stash.users.new_user' | translate }}</h3>
   <form
     class="add-user"
