--- a/apps/dashboard/src/app/account/account-kbs/users-dialog/users-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/users-dialog/users-dialog.component.html
@@ -1,6 +1,6 @@
 <pa-modal-advanced fitContent>
   <pa-modal-title>{{ 'account.stash.users' | translate }}</pa-modal-title>
   <pa-modal-content>
-    <app-users-manage [kb]="modal.config.data?.['kb']"></app-users-manage>
+    <app-users-manage></app-users-manage>
   </pa-modal-content>
 </pa-modal-advanced>
