--- a/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -14,7 +14,7 @@
 
       <pa-input
         id="client-email"
-        formControlName="email"
+        formControlName="contact"
         help="account.email_info"
         [errorMessages]="validationMessages.email">
         {{ 'generic.email' | translate }}*
