[sc-7790] Avoid confusion when deleting account

--- a/apps/dashboard/src/app/account/account-manage/account-delete/account-delete.component.html
+++ b/apps/dashboard/src/app/account/account-manage/account-delete/account-delete.component.html
@@ -7,7 +7,7 @@
       <pa-checkbox
         noEllipsis
         [(value)]="deleteAccount">
-        {{ 'account.delete_account_confirm' | translate : { account: (account | async)?.title } }}
+        {{ 'account.delete_account_confirm' | translate }}
       </pa-checkbox>
     </div>
     <div
