--- a/apps/dashboard/src/app/account/account-manage/account-manage.component.html
+++ b/apps/dashboard/src/app/account/account-manage/account-manage.component.html
@@ -69,7 +69,7 @@
       <div class="dangerous-zone">
         <h3>{{ 'account.delete_account' | translate }}</h3>
         <div *ngIf="(cannotDeleteAccount | async) === false">
-          <p>{{ 'account.delete_account_warning_1' | translate: { account: account?.title || '' } }}</p>
+          <p>{{ 'account.delete_account_warning_1' | translate }}</p>
           <ul>
             <li>{{ 'account.delete_account_warning_2' | translate }}</li>
             <li>{{ 'account.delete_account_warning_3' | translate }}</li>
