--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -47,14 +47,9 @@
             (valueChange)="conf.id === 'generative_model' ? updatePrompts($event) : undefined"
             [class.two-columns]="(conf.data.options || []).length > 5">
             <pa-radio
-              *ngFor="let value of conf.data.options"
-              [value]="value.value">
-              {{
-                (hasTranslation('stash.config.option.' + value.value)
-                  ? 'stash.config.option.' + value.value
-                  : value.name.toLowerCase()
-                ) | translate
-              }}
+              *ngFor="let option of conf.data.options"
+              [value]="option.value">
+              {{ option | learningOption: conf.id }}
             </pa-radio>
           </pa-radio-group>
           <div
