--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -145,6 +145,8 @@
   --modal-background-color: var(--custom-modal-background-color, var(--color-neutral-lighter));
   --dropdown-background-color: var(--custom-dropdown-background-color, var(--color-light-stronger));
   --container-background-color: var(--custom-container-background-color, var(--color-light-stronger));
+  --filter-header-background-color: var(--custom-filter-header-background-color, var(--color-neutral-lightest));
+  --filter-header-background-active-color: var(--custom-filter-header-background-active-color, var(--color-neutral-lighter));
 
   // Global style
   box-sizing: border-box;
@@ -164,5 +166,7 @@
     --modal-background-color: #303136;
     --dropdown-background-color: #26282b;
     --container-background-color: #1f2023;
+    --filter-header-background-color: #2b2d30;
+    --filter-header-background-active-color: #303136;
   }
 }
